Fix some spacing that got screwed up when refactoring the sidebar styles.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -310,7 +310,7 @@ header#secondary {
             .bulleted-list();
         }
 
-        .horizontal-list(0, 0);
+        .horizontal-list(5px, 0);
         li:not(:last-child) {
             &:after {
                 content: "/";
@@ -332,6 +332,7 @@ header#secondary {
 
                 li {
                     text-indent: 0;
+                    padding-right: 0;
                 }
 
                 li:not(:last-child) {
